2015-11-22  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (add_undo): Delete a condition that will never occur --
	this function is only ever called with PASTE when cutbuffer != NULL.
	* src/text.c: Rewrap, rewrite, rename, and reorder some things.
	* src/text.c (do_undo, do_redo): Elide an unneeded variable.

2015-11-21  Benno Schulenberg  <bensberg@justemail.net>
	* src/nano.c (main): Let the value of a --fill option on the
	command	line override the value of a "set fill" in an rcfile.
	This fixes Savannah bug #46492.
	* ChangeLog, NEWS: Add the release marker and copy the news item.

2015-11-21  David Lawrence Ramsey  <pooka109@gmail.com>
	* ChangeLog, NEWS: Fix a typo and adjust some spacing.

GNU nano 2.4.3 - 2015.11.18

2015-11-12  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_undo, update_undo): Store the correct end position of
	an inserted file, and use it when undoing.  Fixes Savannah bug #46414.
	* src/text.c (add_undo, update_undo): Delete an unneeded alias -- it
	wasn't being used consistently anyway.

2015-11-11  Benno Schulenberg  <bensberg@justemail.net>
	* src/text.c (do_redo, update_undo): Redo an Enter from the stored
	undo data, instead of running do_enter() again, because the latter
	will behave differently depending on the setting of autoindent.
	This addresses Debian bug #793053 reported by Clancy.
	* src/text.c (do_enter): Chop the now unused parameter 'undoing'.
	* src/text.c (do_enter_void): Discard this now useless function.

2015-11-10  Benno Schulenberg  <bensberg@justemail.net>
	* src/winio.c (edit_draw): Skip a zero-length match only when there
	/is/ a match.  Found with valgrind.  This fixes Savannah bug #41908.
	* src/files.c (do_lockfile, update_poshistory): Plug memory leaks.

2015-11-08  Benno Schulenberg  <bensberg@justemail.net>
	* src/global.c (shortcut_init): Allow exiting from the file browser
	with the same key (^T) as it was entered (as ^G for the help viewer).